# EducationalProject_Server

./: CMakeLists.txt
Server/: Client.cpp  Client.h  Clients.cpp  Clients.h  Log.cpp  Log.h  Room.cpp  Room.h  RoomDeleteListener.cpp  RoomDeleteListener.h  Rooms.cpp  Rooms.h  Server.cpp  Server.h  main.cpp
